Fix Trail Filter layout bug on Safari

--- a/src/components/pages/Trails/TrailsFilterSort/TrailsFilter.scss
+++ b/src/components/pages/Trails/TrailsFilterSort/TrailsFilter.scss
@@ -16,11 +16,16 @@
 		padding: 18px 0;
 	}
 
+	.filter-list {
+		width: 100%;
+	}
+
 	.filter-title {
 		font-size: 18px;
 		font-weight: 600;
 		letter-spacing: 1px;
 		position: relative;
+		white-space: nowrap;
 	}
 
 	.filter-item {
